--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,14 +18,14 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 
-					<div class="navbar-collapse collapse" id="navbarsExample03">
+					<div class="navbar-collapse collapse me-auto justify-content-end" id="navbarsExample03">
 
 						{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 							<div class="dropdown text-end">
 								<span class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
 									Vous êtes connecté en tant que :
 								</span>
-								<ul class="dropdown-menu">
+								<ul class="dropdown-menu me-auto">
 									<li>
 										<a class="dropdown-item" href={{ path('app_favorite')}} class="nav-link active">Mes favoris</a>
 									</li>
@@ -37,8 +37,8 @@
 									</li>
 								</div>
 							{% else %}
-								<div class="text-end d-flex">
-									<ul class="nav nav-pills">
+								<div class="text-end ">
+									<ul class="nav nav-pills me-auto">
 										<li class="nav-item">
 											<a href={{ path('app_login')}} class="nav-link active px-2 mx-3">Connexion</a>
 										</li>
