--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,14 @@
 			{% endblock %}
 		</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-		<link rel="icon" href={{asset('images/pro_immo_portail-favicon.png')}} type="image/x-icon"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
-            {{ encore_entry_link_tags('app') }}
-            {{ encore_entry_script_tags('app') }}
+		<link rel="icon" href={{asset('images/pro_immo_portail-favicon.png')}} type="image/x-icon">
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+
 		<link rel="stylesheet" href={{asset('css/index.css')}}>
 	</head>
 
@@ -21,6 +26,12 @@
 				<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
+
+				<div>
+					Avec Pro Immo Portail, vous trouverez
+					<span {{ stimulus_controller('symfony/ux-typed', { strings: [ 'la maison familiale idéale !', 'l\'appartement de vos rêves !', 'votre coup de coeur immobilier !', 'votre résidence secondaire !'], loop: true, showCursor: true, cursorChar: '|', })}}></span>
+				</div>
+
 				<div class="navbar-collapse collapse me-auto justify-content-end" id="navbarsExample03">
 					{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 						<div class="dropdown text-end">
